# CarDealershipProject

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: CarManager.hpp  car.hpp
resources/: CarsDB.csv
src/: CarManager.cpp  car.cpp  main.cpp
test/: CMakeLists.txt  car_manager_test.cpp  test_car.cpp
